refactored ccp module

--- a/MainEventFlow/pom.xml
+++ b/MainEventFlow/pom.xml
@@ -45,5 +45,10 @@
     		<artifactId>ldm</artifactId>
     		<version>11.0.1</version>
     	</dependency>
+    	<dependency>
+    		<groupId>com.tibco.ep.sb.adapter</groupId>
+    		<artifactId>feedsim</artifactId>
+    		<version>11.0.1</version>
+    	</dependency>
     </dependencies>
 </project>
