--- a/MainEventFlow/src/main/configurations/customFunctions.conf
+++ b/MainEventFlow/src/main/configurations/customFunctions.conf
@@ -201,6 +201,31 @@ configuration = {
 				type = "simple"
 			}
 
+			GetPolicyParams = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "GetPolicyParams"
+				type = "simple"
+			}
+			PutPolicyParams = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "PutPolicyParams"
+				type = "simple"
+			}
+			GetODTParams = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "GetODTParams"
+				type = "simple"
+			}
+			PutODTParams = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "PutODTParams"
+				type = "simple"
+			}
+
 			// Configuration for a single custom function. Function names must conform to Java identifier semantics.
 			convertHexToStr = {
 
