--- a/MainEventFlow/src/main/configurations/customFunctions.conf
+++ b/MainEventFlow/src/main/configurations/customFunctions.conf
@@ -207,10 +207,10 @@ configuration = {
 				methodName = "GetPolicyParams"
 				type = "simple"
 			}
-			PutPolicyParams = {
+			AssignPolicyParams = {
 				autoArguments = true
 				className = "com.autoever.poc.parser.ParseUtil"
-				methodName = "PutPolicyParams"
+				methodName = "AssignPolicyParams"
 				type = "simple"
 			}
 			GetODTParams = {
@@ -219,10 +219,10 @@ configuration = {
 				methodName = "GetODTParams"
 				type = "simple"
 			}
-			PutODTParams = {
+			AssignODTParams = {
 				autoArguments = true
 				className = "com.autoever.poc.parser.ParseUtil"
-				methodName = "PutODTParams"
+				methodName = "AssignODTParams"
 				type = "simple"
 			}
 
