--- a/MainEventFlow/src/main/configurations/sbclientapilistener.conf
+++ b/MainEventFlow/src/main/configurations/sbclientapilistener.conf
@@ -14,8 +14,10 @@ configuration = {
 				pageSize = 4K
 				maxClientPages = 40960
 			}
-		apiListenerAddress = {
-		  portNumber = 10000
-		}
+
+// for Multi-node. dont fix portNumber
+//		apiListenerAddress = {
+//		  portNumber = 10000
+//		}
 	}
 }
