--- a/deploy_eventflow/src/main/configurations/app.conf
+++ b/deploy_eventflow/src/main/configurations/app.conf
@@ -12,5 +12,22 @@ configuration = {
                 nodeActiveTimeoutSeconds = 10
             }
         }
+        dataDistributionPolicies =
+        {
+			"vdms-dynamic-data-distribution-policy" =
+			{
+				type = "DYNAMIC"
+				dynamicDataDistributionPolicy =
+				{
+					numberOfPartitions = 2
+					primaryDataRedundancy = 
+					{
+						numberOfReplicas = 1
+						replicationType = SYNCHRONOUS
+					}
+				}
+
+			}
+        }
     }
 }
