--- a/MainEventFlow/src/main/configurations/customFunctions.conf
+++ b/MainEventFlow/src/main/configurations/customFunctions.conf
@@ -453,6 +453,91 @@ configuration = {
 				// Function type, one of 'simple' or 'aggregate'. This key is optional and its default value is 'simple'.
 				type = "simple"
 			}
+			
+			getCCPDeltaValue = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetDeltaValue"
+				type = "simple"
+			}
+
+			getCCPMaxFieldValue= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMaxValue"
+				type = "simple"
+			}
+
+			getCCPMinFieldValue= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMinValue"
+				type = "simple"
+			}
+
+			getCCPDVol= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetDVol"
+				type = "simple"
+			}
+
+			getCCPMaxDVol= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMaxDVol"
+				type = "simple"
+			}
+
+			joinCCPCellTuples= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "JoinFromCellTuples"
+				type = "simple"
+			}
+
+			getCCPCellDatas= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetCellTupleData"
+				type = "simple"
+			}
+
+			joinCCPMsrTBTuples= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "JoinFromMsrTBTuples"
+				type = "simple"
+			}
+
+			getCCPMsrTBDatas= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMsrTBTupleData"
+				type = "simple"
+			}
+
+			joinCCPNumberList= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "JoinFromNumberList"
+				type = "simple"
+			}
+
+			getCCPMatchedTupleByInterval= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "getMatchedTupleByInterval"
+				type = "simple"
+			}
+
+			getCCPCellDiff= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "getCellDiff"
+				type = "simple"
+			}
+
 		}
 	}
 }
