--- a/MainEventFlow/src/main/configurations/memory_args.conf
+++ b/MainEventFlow/src/main/configurations/memory_args.conf
@@ -13,6 +13,7 @@ configuration = {
 		jvmArgs = [
 		  "-Xmx8g"
 		  "-Xms8g"
+		  "-Xss4m"
 		  "-XX:+UseG1GC"
 		  "-XX:MaxGCPauseMillis=500"
 		  "-XX:ConcGCThreads=1"
