--- a/MainEventFlow/src/main/configurations/mainflow_deploy.conf
+++ b/MainEventFlow/src/main/configurations/mainflow_deploy.conf
@@ -6,6 +6,7 @@ name = "sample-EventFlowDeployment-document"
 type = "com.tibco.ep.streambase.configuration.sbengine"
 version = "1.0.0"
 configuration = {
+
 	// An EventFlow deployment configuration object contains modules and container connections that can be set
 	// independently of the rest of an EventFlow engine's configuration.
 	EventFlowDeployment = {
@@ -16,20 +17,19 @@ configuration = {
 					parameters = {
 						OP_MODE = "user"
 						KAFKA_BROKER = "10.12.109.204:6667;10.12.109.157:6667;10.12.109.232:6667"
-						KAFKA_GROUP_ID = "autoever_vdms_prep"
+						KAFKA_GROUP_ID = "autoever_vdms_server"
 						KAFKA_TOPIC = "AutoSubmitReq"
 						FILE_TEMP_FOLDER = "d:/Projects/vdms/temp"
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 					}
 				}
 			}
-			
 			canflow = {
 				moduleName="com.autoever.poc.maineventflow.CANFlow_v2"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
@@ -39,7 +39,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.DIAGFlow"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
@@ -58,10 +58,10 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.CCPFlow_v2"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
-						THRESHOLD = "88.8"
+						THRESHOLD = "99.9"
 					}
 				}
 			}
@@ -69,7 +69,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.NNFlow"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
