updated can dbc

--- a/deploy_eventflow/src/main/configurations/node_deploy.conf
+++ b/deploy_eventflow/src/main/configurations/node_deploy.conf
@@ -9,7 +9,7 @@ configuration = {
             }
         }
         nodes = {
-        	A = {
+        	"A.EF-VDMS" = {
 				availabilityZoneMemberships = {
 					vdms-availability-zone = {
 						dynamicPartitionBinding = {
