adding dbc logic

--- a/MainEventFlow/src/main/configurations/customFunctions.conf
+++ b/MainEventFlow/src/main/configurations/customFunctions.conf
@@ -225,6 +225,12 @@ configuration = {
 				methodName = "AssignODTParams"
 				type = "simple"
 			}
+			GetMatchedSignal = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "GetMatchedSignal"
+				type = "simple"
+			}
 
 			// Configuration for a single custom function. Function names must conform to Java identifier semantics.
 			convertHexToStr = {
