--- a/MainEventFlow/src/main/configurations/customFunctions.conf
+++ b/MainEventFlow/src/main/configurations/customFunctions.conf
@@ -232,6 +232,19 @@ configuration = {
 				type = "simple"
 			}
 
+			AddToFieldList = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "AddToFieldList"
+				type = "simple"
+			}
+			GetValueInFieldList = {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ParseUtil"
+				methodName = "GetValueInFieldList"
+				type = "simple"
+			}
+
 			// Configuration for a single custom function. Function names must conform to Java identifier semantics.
 			convertHexToStr = {
 
