--- a/MainLiveView/pom.xml
+++ b/MainLiveView/pom.xml
@@ -28,6 +28,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>com.tibco.ep.sb.adapter</groupId>
+        	<artifactId>ldm</artifactId>
+        	<version>11.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
