fixed byte-order issue

--- a/MainEventFlow/src/main/configurations/Python.conf
+++ b/MainEventFlow/src/main/configurations/Python.conf
@@ -26,7 +26,7 @@ configuration = {
 					// On Mac, set the path to something like /usr/loca/bin/python3. See the README for details on 
 					// supported Python versions.
 					settings = {
-					  executable = "D:/projects/vdms_env/Scripts/python.exe"
+					  executable = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 					  instance = "python_nn_instance"
 					  useTempFile = "false"
 					  workingDir = "."
@@ -42,7 +42,7 @@ configuration = {
 					// On Mac, set the path to something like /usr/loca/bin/python3. See the README for details on 
 					// supported Python versions.
 					settings = {
-					  executable = "D:/projects/vdms_env/Scripts/python.exe"
+					  executable = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 					  instance = "python_can_instance"
 					  useTempFile = "false"
 					  workingDir = "."
