--- a/MainEventFlow/src/main/configurations/mainflow_deploy.conf
+++ b/MainEventFlow/src/main/configurations/mainflow_deploy.conf
@@ -19,7 +19,7 @@ configuration = {
 						KAFKA_GROUP_ID = "autoever_vdms_local_dev"
 						KAFKA_TOPIC = "AutoSubmitReq"
 						FILE_TEMP_FOLDER = "d:/Projects/vdms/temp"
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 					}
 				}
@@ -29,7 +29,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.CANFlow_v2"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
@@ -39,7 +39,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.CANDBCFlow"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
@@ -49,7 +49,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.DIAGFlow"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
@@ -68,7 +68,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.CCPFlow_v2"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 						THRESHOLD = "88.8"
@@ -79,7 +79,7 @@ configuration = {
 				moduleName="com.autoever.poc.maineventflow.NNFlow"
 				moduleParameterSettings = {
 					parameters = {
-						PYTHON_EXECUTABLE = "D:/projects/vdms_env/Scripts/python.exe"
+						PYTHON_EXECUTABLE = "d:/Projects/vdms/tools/Python/Python311/python.exe"
 						RESOURCE_ROOT = "d:/Projects/vdms/resources"
 						LV_SERVER_URI = "lv://localhost:11080"
 					}
