check current stage

--- a/MainEventFlow/src/main/configurations/customFunctions.conf
+++ b/MainEventFlow/src/main/configurations/customFunctions.conf
@@ -501,10 +501,29 @@ configuration = {
 				type = "simple"
 			}
 
-			getCCPMaxDVol= {
+			getCCPMaxDVolVal= {
 				autoArguments = true
 				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
-				methodName = "GetMaxDVol"
+				methodName = "GetMaxDVolVal"
+				type = "simple"
+			}
+
+			getCCPMaxDVolCells= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMaxDVolCells"
+				type = "simple"
+			}
+			getCCPMaxCDiffVal= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMaxCDiffVal"
+				type = "simple"
+			}
+			getCCPMaxCDiffCells= {
+				autoArguments = true
+				className = "com.autoever.poc.parser.ccp.CCPCustomUtils"
+				methodName = "GetMaxCDiffCells"
 				type = "simple"
 			}
 
